Added funciton: - Search by City/Place

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Weather Check</title>
   </head>
   <body>
-  
-
-<script src="app.js"></script>
+    <form action="/" method="post">
+      <label for="cityName" >Which City: </label>
+      <input type="text" name="cityName" id="cityName">
+      <button type="submit" name="submit">Search</button>
+    </form>
   </body>
 </html>
